0.9.9
- fixed file cache md5 reference

0.9.8
- support isnull lookup for better invalidation
- fixed 'Query' has no len()
- dumped django.utils.hashcompat in favor of hashlib

0.9.7
- support for flex models
- support @cached_as(SomeModel)
- file cache default dir changed to /tmp/cacheops_file_cache
- better support for tuples in extra param in @cached and jinja2 tags

0.9.6
- support gracefull degradation on redis fail (Beres Botond)

0.9.5
- support for proxy models

0.9.4
- fixed occasional redis 100% cpu use (tumb1er)

0.9.3
- invalidate and cleanfilecache commands added to dist
- django 1.5 compatability (jhpinson)

0.9.2
- compatability with latest redis-py
- many other bug fixes
- minor optimizations
- better docs, including PERFORMANCE section