@@ -23,6 +23,7 @@ CACHEOPS_REDIS = {
     'socket_timeout': 3,
 }
 CACHEOPS = {
+    'tests.local': ('just_enable', 60*60, {'local_get': True}),
     '*.*': ('just_enable', 60*60),
 }
 
