@@ -1,3 +1,5 @@
+- fixed local_get with unhashable arg TypeError
+
 0.9.9
 - fixed file cache md5 reference
 
